# NeuroQuest

./: .gitignore  LICENSE  pyproject.toml  readme.md
llm_rpg/app/: console_manager.py  lore_generator.py  main.py  set_memory.py
llm_rpg/clients/: deepseek.py  dummy_llm.py  groq.py  llamacpp.py  llm_factory.py  ollama.py
llm_rpg/engine/: game_ai.py  gateways.py  io.py  lore_generation.py  memory.py  narrator.py  npc_ai.py  tools.py
llm_rpg/gui/: __init__.py  chat.py  chat2.py  components.py  console_manager.py  game_menu.py  styles.py
llm_rpg/prompts/: game_generation.py  gameplay.py  lore_generation.py  npc.py  response_models.py
llm_rpg/templates/: base_client.py  console_manager.py  game_menu.py  memory.py  tool.py
llm_rpg/utils/: config.py  config_loader.py  config_models.py  gui.py  helpers.py  logger.py  mock_functions.py  path_utils.py  prompt_utils.py
