[project]
name = "neuroquest"
version = "0.1.0"
description = "LLM powered textual RPG game"
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.0.0",
    "instructor>=1.14.5",
    "markdown-it-py>=4.0.0",
    "ollama>=0.6.1",
    "openai>=2.17.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "sqlalchemy>=2.0.46",
]
